@@ -1,3 +1,10 @@
+6 April 2009
++ Fixed bugs with popup menu.
++ Added "outdent" ability
++ Updated: img/icon_outdent.gif, 
+  javascript/admin_link/default.php
+  javascript/admin_link/menu.js
+
 23 March 2009
 + Added option to have add links always on.
 + Updated: templates/admin/settings.tpl
